# auth_service

./: Cargo.toml
migrations/2022-11-25-082807_create_todo/: down.sql
migrations/2024-06-15-025654_create_user/: up.sql
scripts/: run_postgres.sh
src/: container.rs  create_app.rs  main.rs
src/api/controllers/: user_handler.rs
src/api/dto/: user.rs
src/domain/: constants.rs  error.rs
src/domain/models/: mod.rs  token.rs  user.rs
src/domain/repositories/: user.rs
src/domain/services/: mod.rs  todo.rs  token.rs  user.rs
src/infrastructure/: schema.rs
src/infrastructure/models/: mod.rs  user.rs
src/infrastructure/repositories/: user.rs
src/infrastructure/services/: mod.rs
src/services/: mod.rs  todo.rs  token.rs  user.rs
src/tests/api/: test_todo_controllers.rs
