[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-threadpool = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2.0.0"
async-trait = "0.1.58"
dotenv = { version = "0.15" }
testcontainers = { version = "0.18.0" }
log = "0.4"
serde_json = "1.0"
futures-util = "0.3.26"
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
env_logger = "0.11.3"
argon2 = "0.5.3"
